# agiletimer

./: CMakeLists.txt  LICENSE  README.md  config.h.cmake
cmake/: AgiletimerConfig.cmake.in  CMakeUtils.cmake  FindToolbox.cmake
include/: CMakeLists.txt
include/agiletimer/: agiletimer.h  agiletimer_pub.h
src/: CMakeLists.txt  agiletimer.c
src/linux/: list.h
tester/: CMakeLists.txt  tester.c
