#* Author: Wady <iswady@163.com>
#* Date:   Wed May 15 12:00:00 2019

set(HEADER_FILES
    agiletimer_pub.h
    agiletimer.h
)

set(AGILETIMER_HEADER_FILES )
foreach(HEADER_FILE ${HEADER_FILES})
    list(APPEND AGILETIMER_HEADER_FILES "${CMAKE_CURRENT_LIST_DIR}/agiletimer/${HEADER_FILE}")
endforeach()
set(AGILETIMER_HEADER_FILES ${AGILETIMER_HEADER_FILES} PARENT_SCOPE)

install(FILES ${AGILETIMER_HEADER_FILES}
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/agiletimer
    PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ
)
